--- a/AutoCRM/package.json
+++ b/AutoCRM/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest",
+    "test:e2e": "vitest src/tests/e2e.test.ts"
   },
   "dependencies": {
     "@types/styled-components": "^5.1.34",
@@ -29,6 +31,7 @@
     "globals": "^15.14.0",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.2",
-    "vite": "^6.0.5"
+    "vite": "^6.0.5",
+    "vitest": "^1.2.1"
   }
 }
