--- a/package.json
+++ b/package.json
@@ -6,10 +6,31 @@
     "@mui/material": "^6.4.0",
     "@supabase/supabase-js": "^2.48.0",
     "date-fns": "^4.1.0",
-    "dotenv": "^16.4.7",
     "react-router-dom": "^6.28.2"
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.3.3"
-  }
+    "@types/react-router-dom": "^5.3.3",
+    "@vitest/ui": "^3.0.4",
+    "dotenv": "^16.4.7",
+    "vitest": "^3.0.4"
+  },
+  "name": "autocrm",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "test": "vitest",
+    "test:e2e": "vitest src/tests/e2e.test.ts"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/dcw-gauntlet/AutoCRM.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/dcw-gauntlet/AutoCRM/issues"
+  },
+  "homepage": "https://github.com/dcw-gauntlet/AutoCRM#readme",
+  "description": ""
 }
