--- a/AutoCRM/package.json
+++ b/AutoCRM/package.json
@@ -1,37 +1,21 @@
 {
   "name": "autocrm",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "version": "0.1.0",
+  "private": false,
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview",
-    "test": "vitest",
-    "test:e2e": "vitest src/tests/e2e.test.ts"
+    "build": "CI=false DISABLE_ESLINT_PLUGIN=true vite build",
+    "dist": "npm run build && cd dist && npm pack",
+    "preview": "vite preview"
   },
-  "dependencies": {
-    "@types/styled-components": "^5.1.34",
-    "date-fns": "^4.1.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-markdown": "^9.0.3",
-    "react-router-dom": "^6.26.0",
-    "styled-components": "^6.1.14"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.17.0",
-    "@types/react": "^18.3.18",
-    "@types/react-dom": "^18.3.5",
-    "@vitejs/plugin-react": "^4.3.4",
-    "eslint": "^9.17.0",
-    "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-refresh": "^0.4.16",
-    "globals": "^15.14.0",
-    "typescript": "~5.6.2",
-    "typescript-eslint": "^8.18.2",
-    "vite": "^6.0.5",
-    "vitest": "^1.2.1"
+  "peerDependencies": {
+    "react": "^18.0.0",
+    "@mui/material": "^5.0.0",
+    "@mui/icons-material": "^5.0.0"
   }
 }
